# MLIR-tensor-dialect

./: .gitignore  CMakeLists.txt  README.md  TensorOps.td  TensorOpsDialect.cpp  TensorOpsDialect.h  TensorOpsOpt.cpp  TensorOpsPasses.cpp  TensorOpsPasses.h  checklist.md  setup.md
test/: alloc_load.mlir  slice.mlir  store.mlir  transpose.mlir
